<resources>
    <string name="app_name">Tune_Trade</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="tune_trade">Tune Trade</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="welcome_username">Welcome {Username}</string>
    <string name="vinyls">Vinyls</string>
    <string name="instruments">Instruments</string>
    <string name="music_player">Music Player</string>
    <string name="tune_trade_Watermark">Tune Trade</string>
    <string name="log_out">Log Out</string>
    <string name="admin_settings">Admin settings</string>
    <string name="enter_address">Enter Address</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="administrator_settings">Administrator Settings</string>
    <string name="add_an_admin_user">Add an admin user</string>
    <string name="add_discount">Add discount</string>
    <string name="check_product_count">Check product count</string>
    <string name="add_products">Add products</string>
    <string name="remove_products">Remove products</string>
    <string name="done">Done</string>
    <string name="enter_the_name_of_the_product">Enter the name of the product</string>
    <string name="how_many_items">How many items?</string>
    <string name="what_is_the_price">What is the price?</string>
    <string name="description_of_product">Description of product</string>
    <string name="add_product">Add Product</string>
    <string name="music_players">Music Players</string>
    <string name="vinyl">Vinyls</string>
    <string name="instruments_addproducts">Instruments</string>
    <string name="add_product_adminpage">Add Product</string>
    <string name="quantity">Quantity</string>
    <string name="cart">Cart</string>
    <string name="enter_the_name_of_the_product_delete">Enter the name of the product</string>
    <string name="remove_product">Remove Product</string>
    <string name="add_discount_title">Add Discount</string>
    <string name="enter_percentage_of_discount">Enter percentage of discount</string>
    <string name="add_discount_to_product">Add Discount To Product</string>
    <string name="add_global_discount">Add Global Discount</string>
    <string name="checkout">Checkout</string>
    <string name="restock_products">Restock Products</string>
    <string name="enter_the_amount_of_products">Enter the amount of products</string>
    <string name="restock">Restock</string>
</resources>