<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminSettingsActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/Welcome_text_adminSettings_Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/administrator_settings"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/add_adminUser_button"
        android:layout_width="500dp"
        android:layout_height="70sp"
        android:layout_marginTop="36dp"
        android:outlineSpotShadowColor="@color/black"
        android:shadowColor="@color/black"
        android:text="@string/add_an_admin_user"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome_text_adminSettings_Textview" />

    <Button
        android:id="@+id/add_discount_button"
        android:layout_width="500dp"
        android:layout_height="70sp"
        android:layout_marginTop="144dp"
        android:outlineSpotShadowColor="@color/black"
        android:shadowColor="@color/black"
        android:text="@string/add_discount"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome_text_adminSettings_Textview" />

    <Button
        android:id="@+id/add_product_button"
        android:layout_width="500dp"
        android:layout_height="70sp"
        android:layout_marginTop="248dp"
        android:outlineSpotShadowColor="@color/black"
        android:shadowColor="@color/black"
        android:text="@string/add_products"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome_text_adminSettings_Textview" />

    <Button
        android:id="@+id/remove_products_button"
        android:layout_width="500dp"
        android:layout_height="70sp"
        android:layout_marginTop="348dp"
        android:outlineSpotShadowColor="@color/black"
        android:shadowColor="@color/black"
        android:text="@string/remove_products"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome_text_adminSettings_Textview" />

    <Button
        android:id="@+id/add_stock_button"
        android:layout_width="500dp"
        android:layout_height="70sp"
        android:layout_marginTop="452dp"
        android:outlineSpotShadowColor="@color/black"
        android:shadowColor="@color/black"
        android:text="@string/restock_products"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome_text_adminSettings_Textview" />

    <TextView
        android:id="@+id/tune_trade_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tune_trade"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove_products_button"
        app:layout_constraintVertical_bias="0.89" />

</androidx.constraintlayout.widget.ConstraintLayout>