<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/Add_product_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_product"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_addProduct_text_box"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:hint="@string/enter_the_name_of_the_product"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/count_addProduct_text_box"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/quantity"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_addProduct_text_box" />

    <EditText
        android:id="@+id/price_addProduct_text_box"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:hint="@string/what_is_the_price"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/count_addProduct_text_box" />

    <EditText
        android:id="@+id/description_addProduct_text_box"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:hint="@string/description_of_product"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_addProduct_text_box" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/description_addProduct_text_box"
        tools:layout_editor_absoluteX="0dp">

        <!--adding a radio button -->
        <RadioButton
            android:id="@+id/Instruments"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/instruments_addproducts"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <!--adding a radio button -->
        <RadioButton
            android:id="@+id/Vinyl"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/vinyls1"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <!--adding a radio button -->
        <RadioButton
            android:id="@+id/Music_player"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/music_players"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/addProduct_button"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_product_adminpage"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>